# ghostroster

./: .gitignore  CLAUDE.md  DEPLOY.md  START-HERE.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: deploy.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: data-sources.md  decision-log.md  feedback-triage.md  game-design-notes.md  how-the-sim-works.md  kickoff-brief.md  portfolio-writeup.md  prd.md
pipeline/: README.md  edition.lock.json  pyproject.toml
pipeline/src/ghostroster_pipeline/: download.py  eligibility.py  emit.py  run.py  stats.py  tables.py  vectors.py
pipeline/tests/: conftest.py  test_determinism.py  test_eligibility_floor.py  test_known_vectors.py  test_license_gate.py  test_payload_size.py  test_real_spotchecks.py
pipeline/tuning/: calibrate.ts  calibration-report.md  calibration.json  ceiling_dist.ts  real_team.py  real_team.ts
public/: _headers
public/data/: ATTRIBUTION.json  teams.json
specs/001-ghost-roster-v1/: data-model.md  plan.md  spec.md  (+1 more)
tests/: baseout.test.ts  comment.test.ts  daily.test.ts  divisions.test.ts  draft.test.ts  fixtures.ts  golden.test.ts  leaderboard.test.ts  perf.test.ts  resolve.test.ts  result.test.ts  rng.test.ts  season.test.ts  spin.test.ts  usage.test.ts
worker/: README.md  package.json  schema.sql  wrangler.toml
(+316 files in other folders)
