[project]
name = "ghostroster-pipeline"
version = "0.1.0"
description = "Offline pipeline: Lahman Database -> Ghost Roster static JSON. Deterministic, license-gated, no Baseball-Reference scraping."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
]

[project.scripts]
ghostroster-pipeline = "ghostroster_pipeline.run:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostroster_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
